# my_42_lib

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  clean.sh  test.c
cmake_include/: requirement.cmake
gnl/: ft_gnl.c  ft_gnl.h
libft/: ft_atoi.c  ft_is.c  ft_memcmp.c  ft_memset.c  ft_numlen.c  ft_putstr.c  ft_strcat.c  ft_strdup.c  ft_strlen.c  ft_to.c  libft.h
libft/src/: ft_itoa.c  ft_memcpy.c  ft_putchar.c  ft_putstr.c  ft_realloc.c  ft_strcat.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_swap.c  ft_to.c
logger/: ft_color.h  ft_logger.c  ft_logger.h  logger.c  logger.h
optLib/: CMakeLists.txt  ft_getopt.c  optlib.h  readme.md
types/: ft_types.h
